# ugly

./: Cargo.toml  LICENSE  README.md
assets/fonts/large/: metrics.ron
assets/fonts/medium/: font.aseprite  metrics.ron
assets/fonts/small/: metrics.ron
benches/: font_layout.rs  text_write.rs
src/: backends.rs  colour.rs  error.rs  font.rs  lib.rs  metrics.rs  render.rs  resource.rs  text.rs  ui.rs
src/backends/: sdl.rs  wgpu.rs
src/backends/sdl/: font.rs  manager.rs  metrics.rs  render.rs
src/backends/wgpu/: buffer.rs  core.rs  error.rs  font.rs  init.rs  instance.rs  render.rs  shader.wgsl  shape.rs  texture.rs  vertex.rs  winit.rs
src/colour/: definition.rs  ega.rs  id.rs  spec.rs
src/font/: error.rs  layout.rs  manager.rs  metrics.rs  path.rs  spec.rs
src/font/metrics/: chars.rs  kerning.rs  layout_iter.rs  width.rs
src/metrics/: anchor.rs  axis.rs  length.rs  point.rs  rect.rs  size.rs
src/render/: logger.rs
src/ui/: layout.rs  render.rs  update.rs  widgets.rs
src/ui/widgets/: label.rs  spacer.rs  stack.rs  zstack.rs
tests/: asset_check.rs
ugly-fontview/: Cargo.toml  example.txt
ugly-fontview/src/: main.rs
