[package]
authors = ["Ashi Stanmore <me@ashikun.xyz>"]
categories = ["graphics", "ui"]
documentation = "https://docs.rs/ugly"
edition = "2021"
homepage = "https://github.com/ashikun/ugly"
keywords = ["graphics", "sdl", "fonts"]
license = "MIT"
name = "ugly"
readme = "README.md"
repository = "https://github.com/ashikun/ugly"
version = "0.1.0"

[dependencies]
css-color-parser = "0.1.2"
ron = "0.8.0"
sdl2 = { version = "0.35.2", features = ["image"], optional = true }
serde = { version = "1.0.144", features = ["derive"] }
serde_with = "2.0.0"
thiserror = "1.0.34"

[dev-dependencies]
criterion = "0.3.6"

[[bench]]
name = "font_layout"
harness = false

[[bench]]
name = "text_write"
harness = false