[package]
authors = ["Ashi Stanmore <me@ashikun.xyz>"]
categories = ["graphics"]
documentation = "https://docs.rs/ugly"
edition = "2021"
homepage = "https://github.com/ashikun/ugly"
keywords = ["graphics", "sdl", "fonts"]
license = "MIT"
name = "ugly"
readme = "README.md"
repository = "https://github.com/ashikun/ugly"
version = "0.1.0"

[workspace]
members = ["ugly-fontview"]

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
css-color-parser = "0.1.2"
ron = "0.8.0"
image = { version = "0.25.1", default-features = false, features = ["png"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_with = "3.8.1"
thiserror = "1.0.60"
wgpu = "0.20.0"
winit = "0.30.0"
itertools = "0.13.0"
ouroboros = "0.18.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "font_layout"
harness = false

[[bench]]
name = "text_write"
harness = false
