[package]
name = "ugly-fontview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ugly = { path = "..", features = ["sdl2"] }
sdl2 = { version = "0.36.0", features = ["image"] }
anyhow = "1.0.82"
thiserror = "1.0.59"
