[package]
name = "ugly-fontview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ugly = { path = ".." }
anyhow = "1.0.83"
thiserror = "1.0.60"
winit = "0.30.0"
wgpu = "0.20.0"
ouroboros = "0.18.3"
pollster = "0.3.0"
